--- a/.gitignore
+++ b/.gitignore
@@ -41,4 +41,9 @@ yarn-error.log*
 next-env.d.ts
 
 /src/generated/prisma
-.env
+.envpublic/1.png
+public/2.png
+public/3.png
+public/4.png
+public/5.png
+public/6.png
